# django-installable-app

./: README.md  cookiecutter.json  local_extensions.py
{{ cookiecutter.package_slug }}/: LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
{{ cookiecutter.package_slug }}/docs/: index.md
{{ cookiecutter.package_slug }}/docs/overrides/: 404.html  home.html
{{ cookiecutter.package_slug }}/docs/overrides/partials/: footer.html  header.html  tabs.html
{{ cookiecutter.package_slug }}/docs/project/: authors.md  sponsors.md  test_fixtures.md
{{ cookiecutter.package_slug }}/docs/reference/: models.md  project.md
{{ cookiecutter.package_slug }}/tests/: asgi.py  settings.py  urls.py  wsgi.py
{{ cookiecutter.package_slug }}/{{ cookiecutter.package_underscored }}/: apps.py
